--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "timeouts for the async/await era, written in TypeScript",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "(npmts)"
   },
@@ -15,5 +16,13 @@
   "bugs": {
     "url": "https://gitlab.com/pushrocks/smartdelay/issues"
   },
-  "homepage": "https://gitlab.com/pushrocks/smartdelay#README"
+  "homepage": "https://gitlab.com/pushrocks/smartdelay#README",
+  "dependencies": {
+    "typings-global": "^1.0.14"
+  },
+  "devDependencies": {
+    "@types/should": "^8.1.30",
+    "should": "^11.1.2",
+    "typings-test": "^1.0.3"
+  }
 }
