--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   },
   "homepage": "https://gitlab.com/pushrocks/smartdelay#README",
   "dependencies": {
-    "typings-global": "^1.0.14"
+    "smartq": "^1.1.1",
+    "typings-global": "^1.0.16"
   },
   "devDependencies": {
-    "@types/should": "^8.1.30",
-    "should": "^11.1.2",
-    "typings-test": "^1.0.3"
+    "tapbundle": "^1.0.13"
   }
 }
