--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "smartdelay",
+  "name": "@pushrocks/smartdelay",
   "version": "1.0.4",
   "description": "timeouts for the async/await era, written in TypeScript",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "(npmts)"
+    "test": "tsrun test/test.ts",
+    "build": "(npmts)"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,12 @@
   },
   "homepage": "https://gitlab.com/pushrocks/smartdelay#README",
   "dependencies": {
-    "smartq": "^1.1.1",
-    "typings-global": "^1.0.16"
+    "@pushrocks/smartpromise": "^2.0.5"
   },
   "devDependencies": {
-    "tapbundle": "^1.0.13"
-  }
+    "@gitzone/tsrun": "^1.1.1",
+    "@types/node": "^10.5.2",
+    "tapbundle": "^2.0.2"
+  },
+  "private": true
 }
