--- a/package.json
+++ b/package.json
@@ -28,5 +28,16 @@
     "@gitzone/tstest": "^1.0.28",
     "@pushrocks/tapbundle": "^3.0.13",
     "@types/node": "^12.12.5"
-  }
+  },
+  "files": [
+    "ts/**/*",
+    "ts_web/**/*",
+    "dist/**/*",
+    "dist_web/**/*",
+    "dist_ts_web/**/*",
+    "assets/**/*",
+    "cli.js",
+    "npmextra.json",
+    "readme.md"
+  ]
 }
