--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@gitzone/tsrun": "^1.2.8",
     "@gitzone/tstest": "^1.0.28",
     "@pushrocks/tapbundle": "^3.0.13",
-    "@types/node": "^12.12.5"
+    "@types/node": "^12.12.5",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0"
   },
   "files": [
     "ts/**/*",
