--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": false,
   "version": "2.0.6",
   "description": "timeouts for the async/await era, written in TypeScript",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist_ts/index.js",
+  "typings": "dist_ts/index.d.ts",
   "scripts": {
     "test": "(tstest test/)",
-    "build": "(tsbuild)"
+    "build": "(tsbuild && tsbundle npm)"
   },
   "repository": {
     "type": "git",
@@ -23,19 +23,21 @@
     "@pushrocks/smartpromise": "^3.0.6"
   },
   "devDependencies": {
-    "@gitzone/tsbuild": "^2.1.17",
+    "@gitzone/tsbuild": "^2.1.24",
+    "@gitzone/tsbundle": "^1.0.69",
     "@gitzone/tsrun": "^1.2.8",
     "@gitzone/tstest": "^1.0.28",
-    "@pushrocks/tapbundle": "^3.0.13",
-    "@types/node": "^12.12.5",
-    "tslint": "^5.20.0",
+    "@pushrocks/tapbundle": "^3.2.1",
+    "@types/node": "^14.0.5",
+    "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0"
   },
   "files": [
     "ts/**/*",
     "ts_web/**/*",
     "dist/**/*",
-    "dist_web/**/*",
+    "dist_*/**/*",
+    "dist_ts/**/*",
     "dist_ts_web/**/*",
     "assets/**/*",
     "cli.js",
